deploy/k8s-prod/overlays/prod/ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emplus-api
spec:
  tls:
    - hosts:
        - api.emplus.app
      secretName: emplus-api-tls
  rules:
    - host: api.emplus.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emplus-api
                port:
                  number: 3000
